--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,6 +11,7 @@
             android:roundIcon="@mipmap/ic_launcher_round"
             android:supportsRtl="true"
             android:theme="@style/Theme.Redioteka">
+        <activity android:name=".ActivityWithBottom" />
         <activity android:name=".views.MoviePageView" />
         <activity android:name=".views.MovieView" />
         <activity
